--- a/app/src/main/res/layout-xlarge/activity_addnewpoint.xml
+++ b/app/src/main/res/layout-xlarge/activity_addnewpoint.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="org.fruct.oss.getssupplementapp.AddNewPointActivity"
+    tools:context="org.fruct.oss.getssupplement.AddNewPointActivity"
     >
 
     <LinearLayout
